<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.details.AppointmentDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/img_height"
                android:background="@color/cardview_light_background"
                android:scaleType="centerInside"
                android:src="@drawable/img_coordinator_appointment"
                app:layout_collapseMode="parallax" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_16_dp">

                <ImageView
                    android:id="@+id/img_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_appointment_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4_dp"
                    android:hint="@string/please_add_appointment_name"
                    app:layout_constraintBottom_toBottomOf="@id/img_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_name"
                    app:layout_constraintTop_toTopOf="@+id/img_name" />

                <ImageView
                    android:id="@+id/img_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_map"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_name" />

                <TextView
                    android:id="@+id/txt_location"
                    android:autoLink="web"
                    android:layout_width="0dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColorLink="?colorSecondary"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4_dp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_location"
                    app:layout_constraintStart_toEndOf="@+id/img_location"
                    app:layout_constraintTop_toTopOf="@+id/img_location" />

                <ImageView
                    android:id="@+id/img_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_calendar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_location" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4_dp"
                    android:text="@string/please_add_date"
                    app:layout_constraintBottom_toBottomOf="@+id/img_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_date"
                    app:layout_constraintTop_toTopOf="@+id/img_date" />

                <ImageView
                    android:id="@+id/img_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_date" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4_dp"
                    android:text="@string/please_add_time"
                    app:layout_constraintBottom_toBottomOf="@+id/img_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_time"
                    app:layout_constraintTop_toTopOf="@+id/img_time" />

                <TextView
                    android:id="@+id/txt_appointment_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:hint="@string/lorem_ipsum"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_time" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>